text size adjust fix on mobile orientation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,6 +298,7 @@ h4 {
 
 html {
   font-size: 10px;
+  -webkit-text-size-adjust: 100%;
 }
 
 body {
