--- a/assets/sass/layout/base.scss
+++ b/assets/sass/layout/base.scss
@@ -8,6 +8,7 @@
 
 html {
     font-size: 10px;
+    -webkit-text-size-adjust: 100%;
 }
 
 body {
